feat: 重构会话控制器并增强排障流程
- 引入 FlowVersionService 与 SupportOrchestratorService 以解耦逻辑
- 新增附件分析与异步流式响应支持
- 增加操作事件记录与会话流程版本控制