@@ -11,6 +11,8 @@ import com.hardwareai.support.llm.IntentClassifier;
 import com.hardwareai.support.llm.OpenAiCompatibleProvider;
 import com.hardwareai.support.qr.QrApplicationService;
 import com.hardwareai.support.troubleshoot.*;
+import com.hardwareai.support.troubleshoot.FlowVersionService;
+import com.hardwareai.support.analytics.OperationalEventService;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
@@ -26,6 +28,13 @@ import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.time.Instant;
 import java.util.*;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
+import java.util.concurrent.Future;
+import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 /**
@@ -35,6 +44,8 @@ import java.util.stream.Collectors;
 @RequestMapping("/public/conversations")
 class ConversationController {
     private static final Logger log = LoggerFactory.getLogger(ConversationController.class);
+    private static final Set<UUID> ACTIVE_STREAMS = ConcurrentHashMap.newKeySet();
+    private static final ExecutorService STREAM_EXECUTOR = Executors.newVirtualThreadPerTaskExecutor();
     private final QrApplicationService qr;
     private final ConversationRepository conversations;
     private final ConversationProductContextRepository contexts;
@@ -50,10 +61,16 @@ class ConversationController {
     private final TroubleshootStateMachine machine;
     private final HandoffRepository handoffs;
     private final MessageSource messageSource;
-    private final AppProperties config;
-    private final OpenAiCompatibleProvider llm;
+    private final SupportOrchestratorService orchestrator;
+    private final AttachmentProcessingJobRepository attachmentJobs;
+    private final AttachmentAnalysisRepository attachmentAnalyses;
+    private final ConversationFlowSessionRepository flowSessions;
+    private final ConversationFlowStepRepository flowSteps;
+    private final FlowVersionService flowVersions;
+    private final FlowMatcher flowMatcher;
+    private final OperationalEventService events;
 
-    ConversationController(QrApplicationService qr, ConversationRepository conversations, ConversationProductContextRepository contexts, ConversationContextService contextService, ConversationMessageRepository messages, MessageAttachmentRepository attachments, ConversationFeedbackRepository feedback, ObjectStorage storage, IntentClassifier intents, RetrievalService retrieval, TroubleshootFlowRepository flows, TroubleshootNodeRepository nodes, TroubleshootStateMachine machine, HandoffRepository handoffs, MessageSource messageSource, AppProperties config, OpenAiCompatibleProvider llm) {
+    ConversationController(QrApplicationService qr, ConversationRepository conversations, ConversationProductContextRepository contexts, ConversationContextService contextService, ConversationMessageRepository messages, MessageAttachmentRepository attachments, ConversationFeedbackRepository feedback, ObjectStorage storage, IntentClassifier intents, RetrievalService retrieval, TroubleshootFlowRepository flows, TroubleshootNodeRepository nodes, TroubleshootStateMachine machine, HandoffRepository handoffs, MessageSource messageSource, SupportOrchestratorService orchestrator, AttachmentProcessingJobRepository attachmentJobs, AttachmentAnalysisRepository attachmentAnalyses, ConversationFlowSessionRepository flowSessions, ConversationFlowStepRepository flowSteps, FlowVersionService flowVersions, FlowMatcher flowMatcher, OperationalEventService events) {
         this.qr = qr;
         this.conversations = conversations;
         this.contexts = contexts;
@@ -69,8 +86,14 @@ class ConversationController {
         this.machine = machine;
         this.handoffs = handoffs;
         this.messageSource = messageSource;
-        this.config = config;
-        this.llm = llm;
+        this.orchestrator = orchestrator;
+        this.attachmentJobs = attachmentJobs;
+        this.attachmentAnalyses = attachmentAnalyses;
+        this.flowSessions = flowSessions;
+        this.flowSteps = flowSteps;
+        this.flowVersions = flowVersions;
+        this.flowMatcher = flowMatcher;
+        this.events = events;
     }
 
     /**
@@ -100,6 +123,7 @@ class ConversationController {
         String accessToken = UUID.randomUUID() + "." + UUID.randomUUID();
         var conversation = conversations.save(new Conversation(binding.tenantId(), binding.id(), request.language(), product.region(), hash(accessToken)));
         contextService.establishFromQr(conversation, resolved, request.hardwareVersion(), request.firmwareVersion());
+        events.record(conversation.tenantId(), conversation.id(), "CONVERSATION_CREATED", Map.of("status", conversation.status().name()));
         log.info("Conversation created id={} tenant={} product={} language={} region={}", conversation.id(), binding.tenantId(), binding.productModelId(), request.language(), product.region());
         return new View(conversation.id(), binding.productModelId(), request.language(), product.region(), accessToken);
     }
@@ -108,7 +132,8 @@ class ConversationController {
     public MessageView send(@PathVariable UUID id, @RequestHeader("X-Conversation-Token") String accessToken, @Valid @RequestBody Send request) {
         var conversation = conversations.findById(id).filter(c -> c.status() == Conversation.Status.OPEN).orElseThrow(() -> new IllegalArgumentException("Conversation is unavailable"));
         authorize(conversation, accessToken);
-        var message = messages.save(new ConversationMessage(conversation.id(), request.content(), request.errorCode()));
+        var message = messages.save(new ConversationMessage(conversation.id(), request.content(), request.errorCode(), request.controlledReply()));
+        events.record(conversation.tenantId(), conversation.id(), "MESSAGE_RECEIVED", Map.of("errorCodePresent", request.errorCode() != null));
         log.debug("Message received conversation={} errorCode={} contentLen={}", id, request.errorCode(), request.content().length());
         return MessageView.of(message);
     }
@@ -141,7 +166,23 @@ class ConversationController {
         String key = conversation.tenantId() + "/conversations/" + id + "/" + UUID.randomUUID();
         storage.put(key, file);
         var attachment = attachments.save(new MessageAttachment(message.id(), key, file.getContentType(), file.getSize()));
+        attachmentJobs.save(new AttachmentProcessingJob(attachment.id()));
+        events.record(conversation.tenantId(), conversation.id(), "ATTACHMENT_UPLOADED", Map.of("attachmentType", file.getContentType()));
         return new AttachmentView(message.id(), attachment.id());
+    }
+
+    @GetMapping("/{id}/attachments/{attachmentId}/analysis")
+    public AttachmentAnalysisView attachmentAnalysis(@PathVariable UUID id, @PathVariable UUID attachmentId, @RequestHeader("X-Conversation-Token") String accessToken) {
+        authorizeAttachment(id, attachmentId, accessToken);
+        return attachmentAnalyses.findByAttachmentId(attachmentId).map(AttachmentAnalysisView::of).orElseThrow(() -> new IllegalStateException("Attachment analysis is pending"));
+    }
+
+    @PostMapping("/{id}/attachments/{attachmentId}/analysis/confirm")
+    public AttachmentAnalysisView confirmAttachmentAnalysis(@PathVariable UUID id, @PathVariable UUID attachmentId, @RequestHeader("X-Conversation-Token") String accessToken) {
+        authorizeAttachment(id, attachmentId, accessToken);
+        var analysis = attachmentAnalyses.findByAttachmentId(attachmentId).orElseThrow(() -> new IllegalStateException("Attachment analysis is pending"));
+        analysis.confirm(); attachmentAnalyses.save(analysis);
+        return AttachmentAnalysisView.of(analysis);
     }
 
     @PostMapping("/{id}/feedback")
@@ -172,89 +213,163 @@ class ConversationController {
         }
         if (intent == Intent.HUMAN_REQUEST)
             return new Answer(intent, msg(conversation.language(), "answer.human"), List.of(), null, null, null);
+        if (intent == Intent.UNKNOWN)
+            return new Answer(intent, msg(conversation.language(), "answer.noKnowledge"), List.of(), null, null, null);
         var context = contexts.findAllByConversationIdAndActiveTrue(id).stream().findFirst().orElseThrow(() -> new IllegalStateException("Product context is unavailable"));
         if (intent == Intent.TROUBLESHOOTING || intent == Intent.ERROR_CODE) {
-            var flow = flows.findPublishedMatch(conversation.tenantId(), context.productModelId(), conversation.region(), conversation.language(), intent);
+            var flow = flowMatcher.match(conversation.tenantId(), new FlowMatchScope(context.productModelId(), context.productVariantId(), context.hardwareRevision(), context.firmwareVersion()),
+                    conversation.region(), conversation.language(), intent, history.getLast().content(), history.getLast().errorCode());
             if (flow.isPresent()) {
                 log.info("Matched troubleshoot flow conversation={} flow={} intent={}", id, flow.get().id(), intent);
                 return driveFlow(conversation, history, flow.get());
             }
         }
-        var retrieved = retrieval.retrieve(new RetrievalService.RetrievalRequest(conversation.tenantId(), context.productModelId(),
-                context.productVariantId(), conversation.region(), context.hardwareRevision(), context.firmwareVersion(),
-                conversation.language(), history.getLast().content(), null, 3, 0.0d));
-        if (retrieved.conflictDetected()) {
-            log.warn("Conflicting evidence found conversation={}", id);
-            return new Answer(intent, msg(conversation.language(), "answer.noKnowledge"), List.of(), null, null, null);
-        }
-        var citations = retrieved.evidence().stream()
-                .map(item -> new EvidenceService.Evidence(item.chunkId(), item.documentTitle(), item.excerpt())).toList();
-        if (citations.isEmpty()) {
-            log.info("No evidence found conversation={} intent={} -> suggesting human/error-code", id, intent);
-            return new Answer(intent, msg(conversation.language(), "answer.noKnowledge"), List.of(), null, null, null);
-        }
-        String content = groundedAnswer(history.getLast().content(), citations);
-        log.info("Evidence answer conversation={} intent={} citations={} llmEnabled={}", id, intent, citations.size(), config.llm().enabled());
-        return new Answer(intent, content, citations.stream().map(c -> c.source() + "#" + c.chunkId()).toList(), null, null, null);
+        var result = orchestrator.answer(conversation, context, history.getLast(), intent);
+        log.info("Evidence answer conversation={} intent={} citations={} outcome={}", id, intent, result.citations().size(), result.outcome());
+        return new Answer(intent, result.content(), result.citations(), null, null, null);
     }
 
     @GetMapping(value = "/{id}/answers/stream", produces = "text/event-stream")
     public SseEmitter stream(@PathVariable UUID id, @RequestHeader("X-Conversation-Token") String accessToken) {
         var emitter = new SseEmitter(30_000L);
-        try {
-            var answer = answer(id, accessToken);
-            emitter.send(SseEmitter.event().name("answer").data(answer));
-            emitter.complete();
-        } catch (Exception e) {
-            emitter.completeWithError(e);
-        }
+        if (!ACTIVE_STREAMS.add(id)) { emitter.completeWithError(new IllegalStateException("An answer is already being generated")); return emitter; }
+        var cancelled = new AtomicBoolean(false);
+        var completed = new AtomicBoolean(false);
+        var task = new AtomicReference<Future<?>>();
+        Runnable cancel = () -> {
+            ACTIVE_STREAMS.remove(id);
+            if (!completed.get()) {
+                cancelled.set(true);
+                var running = task.get();
+                if (running != null) running.cancel(true);
+            }
+        };
+        emitter.onCompletion(cancel);
+        emitter.onTimeout(cancel);
+        task.set(STREAM_EXECUTOR.submit(() -> {
+            try {
+                var result = answer(id, accessToken);
+                if (cancelled.get()) return;
+                String answerId = UUID.randomUUID().toString();
+                emitter.send(SseEmitter.event().name("meta").data(Map.of("answerId", answerId, "intent", result.intent().name())));
+                for (String chunk : streamChunks(result.content(), 160)) {
+                    if (cancelled.get() || Thread.currentThread().isInterrupted()) return;
+                    emitter.send(SseEmitter.event().name("delta").data(Map.of("answerId", answerId, "content", chunk)));
+                }
+                if (cancelled.get()) return;
+                emitter.send(SseEmitter.event().name("citations").data(result.citations()));
+                emitter.send(SseEmitter.event().name("done").data(Map.of("intent", result.intent().name())));
+                completed.set(true);
+                emitter.complete();
+            } catch (Exception exception) {
+                if (!cancelled.get()) {
+                    try { emitter.send(SseEmitter.event().name("error").data(Map.of("code", "ANSWER_FAILED"))); } catch (Exception ignored) { }
+                    completed.set(true);
+                    emitter.completeWithError(exception);
+                }
+            } finally { ACTIVE_STREAMS.remove(id); }
+        }));
         return emitter;
     }
 
-    private Answer driveFlow(Conversation conversation, List<ConversationMessage> history, TroubleshootFlow flow) {
-        var nodeList = nodes.findAllByFlowIdOrderByOrderIndexAsc(flow.id());
-        if (nodeList.isEmpty())
-            return new Answer(Intent.TROUBLESHOOTING, msg(conversation.language(), "flow.empty"), List.of(), null, null, null);
-        var byKey = nodeList.stream().collect(Collectors.toMap(TroubleshootNode::nodeKey, n -> n));
-        TroubleshootNode node;
-        String nodeKey = conversation.currentNodeKey();
-        if (nodeKey == null || !byKey.containsKey(nodeKey)) {
-            node = nodeList.get(0);
-            conversation.startFlow(flow.id());
-            conversations.save(conversation);
-            log.info("Flow started conversation={} flow={} firstNode={}", conversation.id(), flow.id(), node.nodeKey());
-        } else {
-            var current = byKey.get(nodeKey);
-            var reply = normalizeReply(history.getLast().content(), current);
-            int failures = conversation.flowFailures();
-            if (current.nodeType() == TroubleshootTypes.NodeType.OPERATION && reply == TroubleshootTypes.Reply.NO)
-                failures++;
-            String yes = current.nodeType() == TroubleshootTypes.NodeType.OPERATION ? current.branchNext() : current.branchYes();
-            String no = current.nodeType() == TroubleshootTypes.NodeType.OPERATION ? current.branchNext() : current.branchNo();
-            var t = machine.next(current.nodeType(), current.risk(), reply, yes, no, current.branchUnknown(), failures);
-            log.info("Flow step conversation={} flow={} fromNode={} reply={} failures={} -> nextNode={} escalated={}",
-                    conversation.id(), flow.id(), current.nodeKey(), reply, failures, t.nextNodeKey(), t.escalated());
-            if (t.escalated()) return escalate(conversation, flow);
-            node = byKey.get(t.nextNodeKey());
-            if (node == null) {
-                conversation.clearFlow();
-                conversations.save(conversation);
-                log.info("Flow ended conversation={} flow={} lastNode={}", conversation.id(), flow.id(), current.nodeKey());
-                return new Answer(Intent.TROUBLESHOOTING, msg(conversation.language(), "flow.end"), List.of(), null, null, null);
-            }
-            conversation.setNode(node.nodeKey(), failures);
-            conversations.save(conversation);
-        }
-        if (node.nodeType() == TroubleshootTypes.NodeType.HUMAN_ESCALATION || node.safetyStop() || node.risk() == TroubleshootTypes.Risk.HIGH)
-            return escalate(conversation, flow);
-        boolean end = node.nodeType() == TroubleshootTypes.NodeType.END;
-        var path = pathTo(nodeList, byKey, node.nodeKey());
-        var fc = new FlowControl(flow.id(), node.nodeKey(), node.nodeType().name(), node.expectedInput(), node.risk().name(), path, nodeList.size(), end, false);
-        return new Answer(Intent.TROUBLESHOOTING, node.prompt(), new ArrayList<>(node.sourceRefs()), node.expectedInput(), node.risk().name(), fc);
+    static List<String> streamChunks(String content, int maxChars) {
+        if (content == null || content.isEmpty()) return List.of("");
+        var chunks = new ArrayList<String>();
+        for (int start = 0; start < content.length(); start += maxChars)
+            chunks.add(content.substring(start, Math.min(content.length(), start + maxChars)));
+        return chunks;
     }
 
-    private TroubleshootTypes.Reply normalizeReply(String text, TroubleshootNode node) {
-        var v = text.toLowerCase(Locale.ROOT);
+    private Answer driveFlow(Conversation conversation, List<ConversationMessage> history, TroubleshootFlow matchedFlow) {
+        var active = flowSessions.findFirstByConversationIdAndStatusOrderByStartedAtDesc(conversation.id(), "ACTIVE");
+        if (active.isPresent()) {
+            var definition = flowVersions.byId(active.get().flowVersionId());
+            var pinnedFlow = flows.findById(definition.flowId())
+                    .filter(flow -> flow.tenantId().equals(conversation.tenantId()))
+                    .orElseThrow(() -> new IllegalStateException("Pinned flow is unavailable"));
+            return advanceFlow(conversation, history, pinnedFlow, active.get(), definition);
+        }
+        var definition = flowVersions.latest(matchedFlow.id());
+        var start = definition.start();
+        var session = flowSessions.save(new ConversationFlowSession(conversation.id(), definition.snapshotId(), start.nodeKey()));
+        conversation.startFlow(matchedFlow.id());
+        conversation.setNode(start.nodeKey(), 0);
+        conversations.save(conversation);
+        log.info("Flow started conversation={} flow={} version={} firstNode={}", conversation.id(), matchedFlow.id(), definition.snapshotId(), start.nodeKey());
+        events.record(conversation.tenantId(), conversation.id(), "FLOW_STARTED", Map.of("flowVersion", definition.snapshotId().toString(), "nodeType", start.nodeType()));
+        return renderFlowNode(conversation, matchedFlow, session, definition, start);
+    }
+
+    private Answer advanceFlow(Conversation conversation, List<ConversationMessage> history, TroubleshootFlow flow,
+                               ConversationFlowSession session, FlowVersionService.Definition definition) {
+        var byKey = definition.nodes().stream().collect(Collectors.toMap(FlowVersionService.Node::nodeKey, node -> node));
+        var current = byKey.get(session.currentNodeKey());
+        if (current == null) throw new IllegalStateException("Pinned flow node is unavailable");
+        var reply = normalizeReply(history.getLast(), current);
+        int failures = session.failureCount();
+        if ((nodeType(current) == TroubleshootTypes.NodeType.OPERATION && reply == TroubleshootTypes.Reply.NO)
+                || reply == TroubleshootTypes.Reply.UNKNOWN) failures++;
+        String yes = nodeType(current) == TroubleshootTypes.NodeType.OPERATION ? current.branchNext() : current.branchYes();
+        String no = nodeType(current) == TroubleshootTypes.NodeType.OPERATION ? current.branchNext() : current.branchNo();
+        var transition = machine.next(nodeType(current), risk(current), reply, yes, no, current.branchUnknown(), failures);
+        String result = transition.escalated() ? "ESCALATED" : transition.nextNodeKey() == null ? "COMPLETED" : "NEXT:" + transition.nextNodeKey();
+        flowSteps.save(new ConversationFlowStep(session.id(), current.nodeKey(), reply.name(), history.getLast().id(), result));
+        events.record(conversation.tenantId(), conversation.id(), "FLOW_STEP", Map.of("flowVersion", definition.snapshotId().toString(), "nodeType", current.nodeType(), "outcome", result));
+        log.info("Flow step conversation={} flow={} version={} fromNode={} reply={} failures={} -> nextNode={} escalated={}",
+                conversation.id(), flow.id(), definition.snapshotId(), current.nodeKey(), reply, failures, transition.nextNodeKey(), transition.escalated());
+        if (transition.escalated()) {
+            session.complete();
+            flowSessions.save(session);
+            return escalate(conversation, flow);
+        }
+        var next = byKey.get(transition.nextNodeKey());
+        if (next == null) {
+            session.complete();
+            flowSessions.save(session);
+            conversation.clearFlow();
+            conversations.save(conversation);
+            log.info("Flow ended conversation={} flow={} version={} lastNode={}", conversation.id(), flow.id(), definition.snapshotId(), current.nodeKey());
+            return new Answer(Intent.TROUBLESHOOTING, msg(conversation.language(), "flow.end"), List.of(), null, null, null);
+        }
+        session.advance(next.nodeKey(), failures);
+        flowSessions.save(session);
+        conversation.setNode(next.nodeKey(), failures);
+        conversations.save(conversation);
+        return renderFlowNode(conversation, flow, session, definition, next);
+    }
+
+    private Answer renderFlowNode(Conversation conversation, TroubleshootFlow flow, ConversationFlowSession session,
+                                  FlowVersionService.Definition definition, FlowVersionService.Node node) {
+        if (nodeType(node) == TroubleshootTypes.NodeType.HUMAN_ESCALATION || node.safetyStop() || risk(node) == TroubleshootTypes.Risk.HIGH) {
+            session.complete();
+            flowSessions.save(session);
+            return escalate(conversation, flow);
+        }
+        boolean end = nodeType(node) == TroubleshootTypes.NodeType.END;
+        if (end) {
+            session.complete();
+            flowSessions.save(session);
+            conversation.clearFlow();
+            conversations.save(conversation);
+        }
+        var byKey = definition.nodes().stream().collect(Collectors.toMap(FlowVersionService.Node::nodeKey, value -> value));
+        var path = pathTo(definition.nodes(), byKey, node.nodeKey());
+        var refs = node.sourceRefs() == null ? List.<String>of() : node.sourceRefs();
+        var control = new FlowControl(flow.id(), node.nodeKey(), node.nodeType(), node.expectedInput(), node.risk(), path, definition.nodes().size(), end, false);
+        return new Answer(Intent.TROUBLESHOOTING, node.prompt(), new ArrayList<>(refs), node.expectedInput(), node.risk(), control);
+    }
+
+    private TroubleshootTypes.NodeType nodeType(FlowVersionService.Node node) {
+        return TroubleshootTypes.NodeType.valueOf(node.nodeType());
+    }
+
+    private TroubleshootTypes.Risk risk(FlowVersionService.Node node) {
+        return TroubleshootTypes.Risk.valueOf(node.risk());
+    }
+
+    private TroubleshootTypes.Reply normalizeReply(ConversationMessage message, FlowVersionService.Node node) {
+        if (message.controlledReply() != null) return message.controlledReply();
+        var v = message.content().toLowerCase(Locale.ROOT);
         if ("free_text".equals(node.expectedInput())) {
             if (contains(v, "未解决", "没好", "失败", "无效", "不行", "no", "fail", "not", "无效"))
                 return TroubleshootTypes.Reply.NO;
@@ -267,10 +382,10 @@ class ConversationController {
         return TroubleshootTypes.Reply.UNKNOWN;
     }
 
-    private List<String> pathTo(List<TroubleshootNode> list, Map<String, TroubleshootNode> byKey, String target) {
+    private List<String> pathTo(List<FlowVersionService.Node> list, Map<String, FlowVersionService.Node> byKey, String target) {
         var path = new ArrayList<String>();
         var seen = new HashSet<String>();
-        var cur = list.get(0);
+        var cur = list.getFirst();
         while (cur != null && !seen.contains(cur.nodeKey()) && path.size() <= 100) {
             path.add(cur.nodeKey());
             seen.add(cur.nodeKey());
@@ -290,22 +405,6 @@ class ConversationController {
         return false;
     }
 
-    private String groundedAnswer(String question, List<EvidenceService.Evidence> citations) {
-        if (!config.llm().enabled()) return citations.getFirst().text();
-        if (config.llm().baseUrl() == null || config.llm().apiKey() == null || config.llm().model() == null
-                || config.llm().baseUrl().isBlank() || config.llm().apiKey().isBlank() || config.llm().model().isBlank())
-            return citations.getFirst().text();
-        String evidenceText = citations.stream().map(c -> "[" + c.source() + "] " + c.text()).collect(Collectors.joining("\n\n"));
-        try {
-            return llm.complete(config.llm().baseUrl(), config.llm().apiKey(), config.llm().model(),
-                    "Answer only from the supplied product-support evidence. If it is insufficient, say so and recommend human support.",
-                    "Question: " + question + "\n\nEvidence:\n" + evidenceText);
-        } catch (Exception e) {
-            log.warn("LLM unavailable; returning cited source extract");
-            return citations.getFirst().text();
-        }
-    }
-
     private Answer escalate(Conversation conversation, TroubleshootFlow flow) {
         var handoff = handoffs.save(new HandoffRequest(conversation.tenantId(), conversation.id(), "flow-" + UUID.randomUUID(),
                 msg(conversation.language(), "handoff.title", flow.title()), msg(conversation.language(), "handoff.desc"), true));
@@ -318,6 +417,14 @@ class ConversationController {
     private void authorize(Conversation conversation, String accessToken) {
         if (accessToken == null || !conversation.authorizes(hash(accessToken)))
             throw new IllegalArgumentException("Conversation access is invalid");
+    }
+
+    private void authorizeAttachment(UUID conversationId, UUID attachmentId, String accessToken) {
+        var conversation = conversations.findById(conversationId).orElseThrow(() -> new IllegalArgumentException("Conversation is unavailable"));
+        authorize(conversation, accessToken);
+        var attachment = attachments.findById(attachmentId).orElseThrow(() -> new IllegalArgumentException("Attachment not found"));
+        var message = messages.findById(attachment.messageId()).orElseThrow(() -> new IllegalArgumentException("Attachment message not found"));
+        if (!conversationId.equals(message.conversationId())) throw new IllegalArgumentException("Attachment is not in this conversation");
     }
 
     private boolean validImageSignature(MultipartFile file) {
@@ -343,7 +450,8 @@ class ConversationController {
                   @Size(max = 80) String hardwareVersion, @Size(max = 80) String firmwareVersion) {
     }
 
-    record Send(@NotBlank @Size(max = 4000) String content, @Size(max = 100) String errorCode) {
+    record Send(@NotBlank @Size(max = 4000) String content, @Size(max = 100) String errorCode,
+                TroubleshootTypes.Reply controlledReply) {
     }
 
     record ChangeProduct(@NotNull UUID productModelId, UUID productVariantId, @Size(max = 80) String hardwareRevision,
@@ -357,6 +465,9 @@ class ConversationController {
 
     record AttachmentView(UUID messageId, UUID attachmentId) {
     }
+    record AttachmentAnalysisView(String ocrText, String errorCode, Double confidence, boolean requiresConfirmation, String status) {
+        static AttachmentAnalysisView of(AttachmentAnalysis value) { return new AttachmentAnalysisView(value.ocrText(), value.errorCode(), value.confidence(), value.requiresConfirmation(), value.status()); }
+    }
 
     record Answer(Intent intent, String content, List<String> citations, String expectedInput, String risk,
                   FlowControl flowControl) {
@@ -369,9 +480,9 @@ class ConversationController {
     record View(UUID id, UUID productModelId, String language, String region, String conversationAccessToken) {
     }
 
-    record MessageView(UUID id, String content, String errorCode, Instant createdAt) {
+    record MessageView(UUID id, String sender, String content, String errorCode, Instant createdAt) {
         static MessageView of(ConversationMessage message) {
-            return new MessageView(message.id(), message.content(), message.errorCode(), message.createdAt());
+            return new MessageView(message.id(), message.sender().name(), message.content(), message.errorCode(), message.createdAt());
         }
     }
 }
